#262 Buttons are not showing correct styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -154,6 +154,35 @@
     font-weight: 600;
 }
 
+.blog main p.button-container>a{
+    margin-top: 1.5rem;
+    border-radius: 9999px;
+    border-width: 1px;
+    --tw-border-opacity: 1;
+    border-color: rgb(117 35 255 / var(--tw-border-opacity));
+    background-color: transparent;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1.25rem;
+    --tw-text-opacity: 1;
+    color: rgb(117 35 255 / var(--tw-text-opacity));
+    text-decoration-line: none;
+    transition-property: all;
+    transition-duration: 150ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.blog main p.button-container>a:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(117 35 255 / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .blog main .default-content-wrapper ol, .blog main .default-content-wrapper ul{
     margin-top: 0.75rem;
     margin-left: 3rem;
@@ -1165,7 +1194,7 @@ main .section.hero-container{
     --tw-scale-y: .99;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
     --tw-bg-opacity: 1;
-    background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+    background-color: rgb(234 222 255 / var(--tw-bg-opacity));
     font-weight: 700;
 }
 
